[gd_scene load_steps=6 format=2]

[ext_resource path="res://NavigationOption.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/uipack/PNG/blue_panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/NavigationOptionDiceReq.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/padlock.png" type="Texture" id=5]

[node name="NavigationOption" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1420.0
margin_bottom = -1040.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Label" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EventName" type="NinePatchRect" parent="Label"]
margin_right = 248.0
margin_bottom = 40.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="TextureButton" type="TextureButton" parent="Label/EventName"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Label/EventName"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Name" type="Label" parent="Label/EventName/CenterContainer"]
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Dread On Open Water"
align = 1
valign = 1

[node name="UnlockRequirement" type="HBoxContainer" parent="Label"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavigationOptionDiceReq" parent="Label/UnlockRequirement" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -21.0
margin_right = 19.0
margin_bottom = 40.0
texture = ExtResource( 5 )
expand = true

[connection signal="pressed" from="Label/EventName/TextureButton" to="." method="_on_TextureButton_pressed"]
